Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,9 @@
   {
    "cell_type": "raw",
    "metadata": {},
-   "source": []
+   "source": [
+    "countries_of"
+   ]
   },
   {
    "cell_type": "markdown",
