Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,22 +345,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Toronto'"
+       "'Archipelago Sea'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[-2]"
+    "top_travel_cities[-5]"
    ]
   },
   {
