--- a/index.ipynb
+++ b/index.ipynb
@@ -808,8 +808,7 @@
     }
    ],
    "source": [
-    "top_travel_cities.pop()\n",
-    "top_travel_cities"
+    "top_travel_cities.append"
    ]
   },
   {
