Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -866,10 +866,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities[4] = 'Walla Walla Valley'"
@@ -884,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -902,10 +900,10 @@
        " 'Salina Island',\n",
        " 'Toronto',\n",
        " 'Pyeongchang',\n",
-       " 'San Antonio']"
+       " 'Sant Antonio']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
