Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1115,19 +1115,19 @@
     {
      "data": {
       "text/plain": [
-       "['Toronto',\n",
-       " 'Archipelago Sea',\n",
+       "['Pyeongchang',\n",
+       " 'Walla Walla Valley',\n",
        " 'Iguazu Falls',\n",
-       " 'Pyeongchang',\n",
+       " 'Greenville',\n",
+       " 'Toronto',\n",
        " 'Los Cabos',\n",
        " 'Buenos Aires',\n",
        " 'Marakesh',\n",
-       " 'Greenville',\n",
-       " 'Albuquerque',\n",
        " 'Salina Island',\n",
-       " 'Walla Walla Valley',\n",
-       " 'San Antonio',\n",
-       " 'Solta']"
+       " 'Sant Antonio',\n",
+       " 'Solta',\n",
+       " 'Archipelago Sea',\n",
+       " 'Albuquerque']"
       ]
      },
      "execution_count": 30,
